android-sdk installation fix