@@ -24,6 +24,7 @@ source /opt/ros/melodic/setup.bash
 export ANDROID_HOME=$HOME/android-sdk
 export PATH=$PATH:$ANDROID_HOME/tools/bin
 export PATH=$PATH:$ANDROID_HOME/platform-tools
+export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
 " >> ~/.bashrc
 source ~/.bashrc
 
